k8s/deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbz-home
spec:
  selector:
    metchLabels:
      app: cbz-home
  template:
    metadata:
    labels:
      app: cbz-home
    spec:
      containers:
       - name: cbz-home
         image: http
         ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbz-mobile
spec:
  selector:
    metchLabels:
      app: cbz-moblie
  template:
    metadata:
    labels:
      app: cbz-moblie
    spec:
      containers:
       - name: cbz-mobile
         image: nginx
         ports:
          - containerPort: 80
