k8s/pod-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app-pod
spec:
  containers:
   - name: my-container
     image: nginx
     volumeMounts:
      - name: hostpath-storage
        mountPath: "/usr/local/apache2/htdocs/"
     volumes:
      - name: hostpath-storage
        persistentVolumeClaim:
          claimName: my-hostpath-pvc
