k8s/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: http
      ports:
       - containerPort: 80
