k8s/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  Namespace: my-namespace
  labels:
    app: myapp
spec:
  containers:
    - name: my-container
      image: nginx
      ports:
       - containerPort: 80
