k8s/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-sct1
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
        env: devops
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
           - name: db
             containerPort: 3306
