k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec: 
  rules: 
  - host: home.com
    http: 
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          Service:
            name: my-svc-home
            port:
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          Service:
            name: my-svc-mobile
            port:
              number: 80
